fix text overlapping with icons

--- a/imports/ui/pages/about/aboutPage.css
+++ b/imports/ui/pages/about/aboutPage.css
@@ -1,6 +1,11 @@
-.about-page-container {
-}
-
 .about-page-text-container {
     font-family: 'Rubik', sans-serif;
+}
+
+.about-page-project-description {
+    max-width: 90%;
+}
+
+.about-page-list-item {
+    max-width: 90%;
 }
